force-app/main/default/objects/SFDC_CSP_Group__c/SFDC_CSP_Group__c.object-meta.xml
<CustomObject>
    <description>SFDC Customer Service Project</description>
    <label>Account Group</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>