force-app/main/default/objects/SFDC_CSP_Group__c/fields/Management_Company__c.field-meta.xml
<CustomField>
    <fullName>Management_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Management Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Groups</relationshipName>
    <type>Lookup</type>
</CustomField>