force-app/main/default/objects/SFDC_CSP_Group__c/fields/Previous_MANAGEMENT_COMPANY_C__c.field-meta.xml
<CustomField>
    <fullName>Previous_MANAGEMENT_COMPANY_C__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Previous MANAGEMENT_COMPANY__C</label>
    <length>155</length>
    <type>Text</type>
</CustomField>