force-app/main/default/objects/SFDC_CSP_Group__c/fields/SERVER_LOCATION_C__c.field-meta.xml
<CustomField>
    <fullName>SERVER_LOCATION_C__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Server Location</label>
    <length>155</length>
    <type>Text</type>
</CustomField>