force-app/main/default/objects/SFDC_CSP_Group__c/recordTypes/MPE_Cluster.recordType-meta.xml
<RecordType>
    <fullName>MPE_Cluster</fullName>
    <active>true</active>
    <description>A Group of Accounts that belonge to an MPE Cluster</description>
    <label>MPE Cluster</label>
</RecordType>