force-app/main/default/objects/SFDC_CSP_Group__c/recordTypes/Subscription.recordType-meta.xml
<RecordType>
    <fullName>Subscription</fullName>
    <active>true</active>
    <description>A Group of Accounts that belone to a Supscription</description>
    <label>Subscription</label>
</RecordType>